--- a/Bib.tex
+++ b/Bib.tex
@@ -34,6 +34,21 @@ S.A. Garcia Morelos, F. Brooks, S. Oliver, A. Walker, K.D. Portillo, R.B. Masek,
 \bibitem{NASAPP}
   Christiansen, E. L., Lear, D. M. (2012). Micrometeoroid and Orbital Debris Environment \& Hypervelocity Shields [PowerPoint slides]. Retrieved from \url{https://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20120002584.pdf}.
   
+\bibitem{SolarEnergyMaterials}
+  Solar Energy Materials and Solar Cells 182 (2018) 121–127 DOI: 10.1016/j.solmat.2018.03.024.
+
+\bibitem{Kaltenbrunner}
+  Kaltenbrunner, M. et al. Ultrathin and lightweight organic solar cells with high flexibility. Nat. Commun. 3:770 DOI: 10.1038/ncomms1772 (2012).
+
+\bibitem{Uher}
+  Uher, J., Frojdh, C., Holy, T., Jakubek, J., Petersson, S., Pospisif, S., . . . Stekl, I. (2007). Silicon Detectors for Neutron Imaging. AIP Conference Proceedings. doi:10.1063/1.2825756
+
+\bibitem{BoronScintillator}
+  EJ-254 Boron Loaded Plastic Scintillator \url{https://eljentechnology.com/images/products/data_sheets/EJ-254.pdf}.
+
+\bibitem{Pawelczak}
+  Pawełczak, I., Glenn, A., Martinez, H., Carman, M., Zaitseva, N., \& Payne, S. (2014). Boron-loaded plastic scintillator with neutron-$\gamma$ pulse shape discrimination capability. Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment, 751, 62-69. doi:10.1016/j.nima.2014.03.027
+  
 \bibitem{Canales}
  Canales D. C. and Ehteshami A., \textit{An attempt to sample atmospheric bacteria}, Houston, TX, 2015, January 11.
 
