--- a/Sections/Introduction.tex
+++ b/Sections/Introduction.tex
@@ -24,8 +24,8 @@ We will then bring the uncontaminated, collected samples down to the surface for
 \noindent \textbf {Primary Scientific Objectives:}
 \begin{enumerate}
 \item Capture microorganisms in the upper atmosphere at altitudes of approximately \SIrange{30}{41}{\kilo\meter} using a method not previously used by the UH HASP team. 
-\item Culture samples and compare them to the collection medium.
 \item Study the cosmic and terrestrial radiation that extremophiles and astronauts are exposed to.
+\item Observe the influence of intense radiation on the structure and performance of organic photovoltaic cells.
 \end{enumerate}
 
 \noindent \textbf {Secondary Scientific Objectives:}
