--- a/Sections/Management.tex
+++ b/Sections/Management.tex
@@ -107,25 +107,25 @@
 \label{sec:Timeline}
 \begin{table}[H]
 \centering
-\caption{Timeline for the 2018 SORA 2.0 Mission}
+\caption{Timeline for the 2019 SORA 3 Mission}
 \label{timeline}
 \resizebox{\textwidth}{!}{%
 \begin{tabular}{|c|l|}
 \hline
-\textbf{Month of 2018} & \multicolumn{1}{c|}{\textbf{Description of Work}} \\ \hline
-\textbf{January} & \begin{tabular}[c]{@{}l@{}} * Secure funding \\ * Create and finish budget for mission \\ * Make inventory of hardware \\ * Procure hardware/software \\ * Start designs of SORA 2.0 \\ * Update SOCRATES \\ * Upgrade vacuum chamber \\ * Recruit new members \end{tabular} \\ \hline
+\textbf{Month of 2019} & \multicolumn{1}{c|}{\textbf{Description of Work}} \\ \hline
+\textbf{January} & \begin{tabular}[c]{@{}l@{}} * Secure funding \\ * Create and finish budget for mission \\ * Make inventory of hardware \\ * Procure hardware/software \\ * Start designs of SORA 3 \\ * Update SOCRATES \\ * Upgrade vacuum chamber \\ * Recruit new members \end{tabular} \\ \hline
 \textbf{February} & \begin{tabular}[c]{@{}l@{}}
-* Continue with work from January.  Funding must be secured by end of March.\\ * Have finished list of inventory\\ * Finalize upgrades to vacuum chamber\\ * Continue recruitment and finalize by end of month.\\ * Continue design work of SORA 2.0\\ * Finish SOCRATES upgrade\end{tabular} \\ \hline
+* Continue with work from January in terms of design development and funding procurement.  \\ * Have finished list of inventory\\ * Continue recruitment if necessary and finalize by end of month.\\\end{tabular} \\ \hline
 \textbf{March} & \begin{tabular}[c]{@{}l@{}}Obtain funding by the end of this month.  Finish all tasks from the previous two months and transition into building phase.\\ * Have all hardware/software orders in by the end of the month\\ * Begin PSIP, have draft by end of the month\end{tabular} \\ \hline
-\textbf{April} & \begin{tabular}[c]{@{}l@{}}* Order remaining items if needed\\ * Finish PSIP by April 25th\\ * SOCRATES and MiniPIX integration and testing\\ * Upgrade clean room and prepare for astrobiology work\end{tabular} \\ \hline
+\textbf{April} & \begin{tabular}[c]{@{}l@{}}* Order remaining items if needed\\ * Submit a NASA On-site Security Clearance Document by April 15th.\\ * Finish PSIP by April 26th\\ * SOCRATES and MiniPIX integration and testing\\ * Prepare for astrobiology work\end{tabular} \\ \hline
 \textbf{May} & \begin{tabular}[c]{@{}l@{}}* PSIP and FLOP development\\ * Finalize integration of SOCRATES and hardware\\ * Continue working on astrobiology upgrades\end{tabular} \\ \hline
-\textbf{June} & \begin{tabular}[c]{@{}l@{}}Final PSIP due June 27th\\ *Finalize astrobiology upgrades and ready for integration\\ * Testing in lab\end{tabular} \\ \hline
-\textbf{July} & \begin{tabular}[c]{@{}l@{}}Final FLOP due July 31st\\ * Make changes from testing and continue tests\end{tabular} \\ \hline
-\textbf{August} & \begin{tabular}[c]{@{}l@{}}Payload Integration (August 4 - 8)\\ *Have all payload work done and ready for flight\end{tabular} \\ \hline
-\textbf{September} & * Launch and recovery TBA \\ \hline
+\textbf{June} & \begin{tabular}[c]{@{}l@{}}Final PSIP due June 28th\\ *Finalize astrobiology upgrades and ready for integration\\ * Testing in lab\end{tabular} \\ \hline
+\textbf{July} & \begin{tabular}[c]{@{}l@{}}Final FLOP due July 19th\\ * Make changes from testing and continue tests\end{tabular} \\ \hline
+\textbf{August} & \begin{tabular}[c]{@{}l@{}}Payload Integration during July 15th - July 19th\\ *Have all payload work done and ready for flight\end{tabular} \\ \hline
+\textbf{September} & \begin{tabular}[c]{@{}l@{}}* Launch SORA 3 on September 2nd\\ * Recovery TBD. \end{tabular} \\ \hline
 \textbf{October} & Debrief and analyze all data from flight \\ \hline
 \textbf{November} & Have final report by end of November \\ \hline
-\textbf{December} & Final Report due on the 8th \\ \hline
+\textbf{December} & Final Report due on the 6th \\ \hline
 \end{tabular}%
 }
 \end{table}
@@ -133,6 +133,4 @@
 
 \subsection{Funding}
 \label{sec:Funding}
-
-
-%Funding sources will be local contributions - applying for funding through the Physics Department, the College of Natural Science and Mathematics, The University of Houston Division of Research, and local organizations and companies willing to support this endeavor.  
+Funding sources will be local contributions - applying for funding through the Physics Department, the College of Natural Science and Mathematics, The University of Houston Division of Research, and local organizations and companies willing to support this endeavor.  Additionally, the University of Houston Department of Biology has promised long-term support for development of the astrobiology system and analysis of the astrobiology data. 
